@@ -967,6 +967,28 @@ name: lang attribute cannot contain square brackets
 in: "some @[[code]]@"
 html: "<p>some <code>[[code]]</code></p>"
 ---
+name: pre blocks preserve leading whitespace
+in: |-
+  pre.      Text in a pre block
+  is displayed in a fixed-width
+       font. It preserves
+    s p a c e s, line breaks
+       and ascii bunnies.
+html: |-
+  <pre>     Text in a pre block
+  is displayed in a fixed-width
+       font. It preserves
+    s p a c e s, line breaks
+       and ascii bunnies.</pre>
+---
+name: code blocks preserve leading whitespace
+in: |-
+  bc.   false
+  } else {
+html: |-
+  <pre><code>  false
+  } else {</code></pre>
+---
 name: code captures spaces when made explicit with square brackets
 in: "Start a paragraph with [@p. @] (that's p, a period, and a space)."
 html: "<p>Start a paragraph with <code>p. </code> (that&#8217;s p, a period, and a space).</p>"
