@@ -3,6 +3,7 @@
 <<<<<<< HEAD
 <<<<<<< HEAD
 <<<<<<< HEAD
+<<<<<<< HEAD
 * Enable code signature to capture trailing space when in square brackets. [Jason Garber]
 
 * Allow emphasized phrases to include underscores. [Jason Garber]
@@ -16,6 +17,10 @@
 =======
 >>>>>>> 1a45c0c... Change to list attributes so you can give style/class to list items (taken from PyTextile).  Breaks backwards compatibility.
 =======
+=======
+* Preserve leading whitespace in pre and bc blocks. [Jason Garber]
+
+>>>>>>> a9d5f73... Preserve leading whitespace in pre and bc blocks. [#129 state:resolved]
 * Don't add hard break after preexisting <br />. [Jason Garber]
 
 >>>>>>> 56bd020... Don't add hard break after preexisting <br />. [#130 state:resolved]
